Recover recommendation screens from temporary service startup failures